src/app/accounts/accounts.component.scss
.action-bar {
    padding: 0.5rem;

    .search-input {
        ::ng-deep .mat-form-field-wrapper {
            margin-bottom: -1.25em !important;
        }
    }
}

.accounts-container {
    padding: 0.5rem;
    height: 100%;
    overflow-y: auto;
    overflow-x: none;


    .grid-item {
        // border: 1px solid lightgray;
        // border-radius: 3px;
        padding: 1rem;
        background-color: #fff;
    }

    .list {
        // border: 1px solid lightgray;
        padding: 0;
        background-color: #fff;
    }

    .grid-item, .list-item {
        border: 1px solid transparent;
    }

    .category-container:not(:first-child) {
        padding-top: 1rem;
    }

    .grid-item:hover, .mat-list-item:hover {
        border: 1px solid #bfd1d6;
        // background-color: #e6edef;
        // box-shadow: 0px 4px 4px -2px #6b95a0;
    }

    .mat-list-icon {
        width: 32px !important;
        height: 32px !important;
        font-size: unset !important;
    }

    .category-header {
        padding: 0.25rem 0.5rem 0.25rem 0;
        margin-bottom: 0.25rem;
        cursor: pointer;
        
        .category-header-title {
            font-size: 1.2rem;
        }

        &:hover {
            background-color: #bfd1d6;
        }
    }

}

.add-button {
    position: fixed;
    right: 16px;
    bottom: 16px;
    z-index: 100;
}

